# xtask

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt  setup.py  xtask.project  xtask.tasks
docs/: docs.tasks
docs/source/: conf.py  index.rst  introduction.rst  learn.rst  quickstart.rst
src/xtask/: __init__.py  __main__.py  constants.py  context.py  settings.py  task.py  task_cache.py  task_file.py  task_graph.py  util.py
