[build-system]
requires = ["setuptools >= 69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xtask"
authors = [{name="Niko Nikolopoulos"}]
requires-python = ">= 3.10"
readme = "README.md"
license = {file = "LICENSE.txt"}
dynamic = ["version", "dependencies"]

[project.scripts]
xtask = "xtask.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "xtask.__version__"}
dependencies = {file = ["requirements.txt"]}